# AI-Sprint-Companion

./: .env.example  .gitignore  README.md  Readme.MD  mcp_config.json  render.yaml  run.bat  run.sh  run_mcp_server.bat  run_mcp_server.sh  run_mcp_test.bat  run_trello_bootstrap.bat
backend/: .dockerignore  Dockerfile  build.sh  pyproject.toml  requirements-prod.txt  requirements.txt
backend/app/: __init__.py  ai.py  config.py  document_parser.py  jira_agent.py  main.py  mcp_agent_test.py  mcp_client.py  mcp_server.py  schemas.py
backend/app/static/css/: styles.css
backend/app/static/js/: app.js
backend/app/templates/: base.html  index.html  jira.html  standup.html  stories.html  tasks.html
backend/app/templates/partials/: error.html  jira_result.html  standup_result.html  stories_result.html  tasks_result.html
backend/tests/: test_ai.py  test_ai_comprehensive.py  test_config.py  test_document_parser.py  test_jira_agent.py  test_mcp_agent.py  test_mcp_client.py  test_mcp_server.py  test_schemas.py  test_smoke.py
docs/: DESIGN_DOCUMENT.md  DESIGN_TESTING.md  PRESENTATION_CHECKLIST.md  PRODUCT_BACKLOG.md  RENDER_DEPLOYMENT.md  SPRINT_PLAN.md  TASKBOARD_LINK.md
samples/: meeting_notes_sample.txt  standup_notes_sample.txt  user_stories_sample.txt
